3422387: Fixes component's spacing when placed in the same section.

--- a/web/themes/custom/provus_bootstrap/scss/admin/_layout_builder.scss
+++ b/web/themes/custom/provus_bootstrap/scss/admin/_layout_builder.scss
@@ -797,7 +797,10 @@ a > .layout-builder__link-wrapped {
 }
 
 .layout .block:not(:first-child) {
-  margin: 0;
+  &:first-child {
+      margin: 0;
+  }
+    margin-bottom: 40px;
 }
 
 // Layout Builder form.
